--- a/word.html
+++ b/word.html
@@ -1,9 +1,9 @@
 ﻿<!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="words.css">
+		<link rel="stylesheet" href="word.css">
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-		<script type="text/javascript" src="words.js"></script>
+		<script type="text/javascript" src="word.js"></script>
 		<meta charset="utf-8">
 	</head>
 		
